@@ -1,3 +1,3 @@
 Makefile
 Makefile.in
-spring.eet
+spring.edj
