@@ -1,3 +1,3 @@
 Makefile
 Makefile.in
-winter.eet
+winter.edj
